# cc_rust

./: .clippy.toml  .gitignore  CLAUDE.md  CODE_ANALYSIS.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  README_MVP.md  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  protocol.rs  server.rs
crates/cli/: Cargo.toml  config.default.toml
crates/cli/src/: config.rs  main.rs
crates/commands/: Cargo.toml
crates/commands/src/: commit.rs  config.rs  cost.rs  doctor.rs  lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: agent.rs  lib.rs  swarm.rs  team.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  error.rs  lib.rs  message.rs  permission.rs  tool.rs  types.rs
crates/engine/: Cargo.toml
crates/engine/src/: client.rs  conversation.rs  lib.rs  loop.rs  query_engine_test.rs  retry.rs  stream.rs  token.rs
crates/memory/: Cargo.toml
crates/memory/src/: frontmatter.rs  lib.rs  prompt.rs  retrieval.rs  storage.rs  types.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/api/: mod.rs
crates/services/src/auth/: mod.rs
crates/services/src/lsp/: mod.rs
crates/services/src/mcp/: mod.rs
crates/services/src/telemetry/: mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: bash.rs  file.rs  lib.rs  registry.rs  search.rs  web.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/tui/src/components/: input.rs  message_list.rs  mod.rs  spinner.rs
docs/: ARCHITECTURE.md  CODE_EXPLANATION.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_GUIDE.md  CONTRIBUTING.md  MVP_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  REFACTORING_GUIDE.md  TESTING_GUIDE.md  TESTING_OVERVIEW.md
docs/claude/: README.md  checklists.md  comments.md  templates.md  workflow.md
scripts/: pre-commit.sh  pre-push.sh
tests/: cli_integration_test.rs  conversation_integration_test.rs  query_engine_integration.rs  tool_integration_test.rs
tests/common/: mod.rs
