[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/engine",
    "crates/tools",
    "crates/commands",
    "crates/tui",
    "crates/services",
    "crates/bridge",
    "crates/coordinator",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code RS Team"]
license = "MIT"
repository = "https://github.com/yourusername/claude-code-rs"
rust-version = "1.80"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"

# HTTP/Networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "http2"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
schemars = { version = "0.8", features = ["chrono", "uuid1", "url"] }
validator = { version = "0.19", features = ["derive"] }

# TUI
ratatui = { version = "0.29", features = ["serde", "macros"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste", "windows"] }
tui-textarea = "0.7"
tui-popup = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time", "registry"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.28"

# Text processing
regex = "1.11"
globset = "0.4"
ignore = "0.4"
walkdir = "2.5"
memchr = "2.7"
aho-corasick = "1.1"
unicode-width = "0.2"
textwrap = "0.16"

# Data structures
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-deque"] }
rayon = "1.10"
indexmap = { version = "2.7", features = ["serde"] }

# Git operations
git2 = { version = "0.19", default-features = false }
gix = { version = "0.68", default-features = false }

# Authentication & Security
jsonwebtoken = "9.3"
ring = "0.17"
keyring = { version = "3.6", features = ["linux-native", "windows-native", "apple-native"] }
secstr = { version = "0.5", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive", "serde"] }

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# Markdown / Documentation
pulldown-cmark = { version = "0.12", features = ["serde"] }
comrak = "0.35"

# Configuration
directories = "5.0"
config = "0.14"
shellexpand = "3.1"

# Utilities
chrono = { version = "0.4", features = ["serde", "now"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde", "fast-rng"] }
url = { version = "2.5", features = ["serde"] }
which = "7.0"
tempfile = "3.14"
notify = { version = "7.0", features = ["macos_fsevent"] }
once_cell = "1.20"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
colored = "2.1"
ansi_term = "0.12"

# Testing
mockall = "0.13"
wiremock = "0.6"
temp-env = "0.3"
assert_cmd = "2.0"
predicates = "3.1"

# Internal workspace dependencies
claude-core = { path = "crates/core" }
claude-engine = { path = "crates/engine" }
claude-tools = { path = "crates/tools" }
claude-commands = { path = "crates/commands" }
claude-tui = { path = "crates/tui" }
claude-services = { path = "crates/services" }
claude-bridge = { path = "crates/bridge" }
claude-coordinator = { path = "crates/coordinator" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2
