[package]
name = "claude"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Claude Code CLI - AI-powered coding assistant"
default-run = "claude_rs"

[[bin]]
name = "claude_rs"
path = "src/main.rs"

[dependencies]
claude-core = { workspace = true }
claude-engine = { workspace = true }
claude-tools = { workspace = true }
claude-commands = { workspace = true }
claude-tui = { workspace = true }
claude-services = { workspace = true }
claude-bridge = { workspace = true }
claude-coordinator = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
