[package]
name = "claude-coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multi-agent coordination and team management"

[dependencies]
claude-core = { workspace = true }
claude-engine = { workspace = true }
claude-tools = { workspace = true }
claude-services = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
