[package]
name = "claude-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "External service integrations for Claude Code"

[dependencies]
claude-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
axum = { workspace = true }
tower-lsp = { workspace = true }
lsp-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
secstr = { workspace = true }
zeroize = { workspace = true }
jsonwebtoken = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
