[package]
name = "claude-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tool implementations for Claude Code"

[dependencies]
claude-core = { workspace = true }
claude-services = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
