[package]
name = "claude-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI components for Claude Code"

[dependencies]
claude-core = { workspace = true }
claude-engine = { workspace = true }
claude-commands = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
tui-popup = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
textwrap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
